# 3D-Python-Render

./: .gitignore  README.md  camera.py  constants.py  environment.yaml  main.py  pyproject.toml  requirements.txt  setting_utils.py  settings.ini  shader_utils.py
shaders/: fragment_shader.frag  vertex_shader.vert
